Fix text on impersonating feature no readable

--- a/src/app/components/mno-impersonation-bar/mno-impersonation-bar.less
+++ b/src/app/components/mno-impersonation-bar/mno-impersonation-bar.less
@@ -1,5 +1,6 @@
 mno-impersonation-bar {
   #impersonate-bar {
+    color: @text-inverse-strong-color;
     background-color: @bg-inverse-color;
     padding-top: 3px;
     padding-bottom: 3px;
